# xtrx_julia

./: .gitmodules  JuliaManifest.toml  JuliaProject.toml  LitexManifest  apply_litex_manifest.sh  fairwaves_xtrx.py  fairwaves_xtrx_platform.py  xtrx_boot_instrument_dump.txt
.buildkite/: gateware.yml.signature  pipeline.yml
firmware/: main.c
gateware/: gpio.py  pmic.py  vctcxo.py
software/: Makefile  Makefile.limesuite  Makefile.soapysdr
software/LibSigflow.jl/src/: LibSigflow.jl
software/XTRX.jl/src/: CSRs_gen.jl
software/XTRX.jl/test/loopback_tests/: missing_samples.jl
software/julia/: build_tarballs.jl
software/kernel/: Makefile  config.h  init.sh  liteuart.c  main.c
software/litepcie-kernel-module/: csr.h  main.c  mem.h  soc.h
software/litepcie-user-library/: litepcie_util.c
software/scripts/: Manifest.toml  Project.toml  acquire_iq.jl  checkIQimbalance.jl  check_missing_samples.jl  debug_receiver.jl  experiment.jl  find_frequency_offset.jl  gps_record.jl  libsigflow.jl  libsigflow_tests.jl  makie_gpu_fft.jl  multi_gps_record.sh  temporal_gain_and_phase_mism.jl  test_digital_loopback.jl  test_loopback.jl  test_pattern.jl  test_pattern_multithreaded.jl  test_rf_loopback.jl  test_settings.jl
software/scripts/limesdr_tests/: julia_rf_loopback.jl
software/soapysdr/: CMakeLists.txt  XTRXDevice.cpp
software/soapysdr-xtrx/: CMakeLists.txt  Streaming.cpp  XTRXDevice.cpp  XTRXDevice.hpp
software/soapysdr-xtrx-lime/: Streaming.cpp  XTRXDevice.cpp  XTRXDevice.hpp
software/user/: Makefile  litepcie_util.c
software/user/liblitepcie/: litepcie_dma.c  litepcie_dma.h  litepcie_helpers.c  litepcie_helpers.h
